automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <h3 class="view-profile-text">View Profile</h3>
               </div>
               <div class="card-text-container">
-                <h4 class="student-name">Diane Vu</h4>
+                <h4 class="student-name">Juan Tenezaca</h4>
                 <p class="student-location">New York, NY</p>
               </div>
             </a>
