--- a/students/juan-tenezaca.html
+++ b/students/juan-tenezaca.html
@@ -19,8 +19,7 @@
         <div class="profile-photo" id="juan-tenezaca-card"></div>
         <div class="social-icon-container">
           <a href="https://www.linkedin.com/in/juan-tenezaca-392071139/"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/linkedin-icon.png"/></a>
-          <a href="http://www.github.com/dianelvu"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/github-icon.png"/></a>
-          <!--<a href="#"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/rss-icon.png"/></a>-->
+          <a href="http://www.github.com/tenj34"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/github-icon.png"/></a>
         </div>
         <div class="vitals-text-container">
           <h1 class="profile-name">Diane Vu</h1>
