automatically backed up by learn

--- a/students/juan-tenezaca.html
+++ b/students/juan-tenezaca.html
@@ -22,9 +22,9 @@
           <a href="http://www.github.com/tenj34"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/github-icon.png"/></a>
         </div>
         <div class="vitals-text-container">
-          <h1 class="profile-name">Diane Vu</h1>
+          <h1 class="profile-name">Juan Tenezaca</h1>
           <h2 class="profile-location">New York, NY</h2>
-          <div class="profile-quote">Community Manager at Learn</div>
+          <div class="profile-quote">Junior Fullstack Developer</div>
         </div>
       </div>
       <div class="details-container">
@@ -34,7 +34,7 @@
               <h3>Biography</h3>
             </div>
             <div class="description-holder">
-              <p>Hi! I'm originally from the San Francisco Bay Area. I'm excited to "meet" you all!</p>
+              <p>Born and raised in the greatest city in the world!</p>
             </div>
           </div>
         </div>
@@ -44,8 +44,8 @@
               <h3>Education</h3>
             </div>
             <div class="description-holder">
-              <h4>UCLA</h4>
-              <h5>Teachers College</h5>
+              <h4>SUNY Oneonta</h4>
+              <h5>School of Computer Science</h5>
             </div>
           </div>
         </div>
