automatically backed up by learn

--- a/students/juan-tenezaca.html
+++ b/students/juan-tenezaca.html
@@ -55,8 +55,8 @@
               <h3>Experience</h3>
             </div>
             <div class="description-holder">
-              <h4>Flatiron School</h4>
-              <h5>Community Manager</h5>
+              <h4>Via</h4>
+              <h5>Driver partner lead.</h5>
             </div>
             <div class="description-holder">
               <h4>Baruch College</h4>
