automatically backed up by learn

--- a/students/juan-tenezaca.html
+++ b/students/juan-tenezaca.html
@@ -59,8 +59,8 @@
               <h5>Driver partner lead.</h5>
             </div>
             <div class="description-holder">
-              <h4>Baruch College</h4>
-              <h5>Student Affairs Coordinator</h5>
+              <h4>SUNY Oneonta</h4>
+              <h5>Help Desk</h5>
             </div>
           </div>
         </div>
